# financelib

./: .env.shared  .gitignore  Makefile  README.md  TODO.md  main.py  requirements-bot.txt  requirements.txt  setup.cfg  setup.py  stock.py
examples/: basic_usage.py
financelib/: __init__.py  settings.py  utils.py
financelib/database/: __init__.py  modals.py  settings.py  sqlite.py
financelib/kap/: __init__.py  kap.py
financelib/livedata/: sabah_com.py
financelib/news/: __init__.py  news.py
financelib/stock/: stock.py
financelib/trading/: __init__.py
financelib/trading/algo_trade/: __init__.py  adx.py  aroon.py  atr.py  bollinger_bands.py  cci.py  ema.py  macd.py  rsi.py  sma.py  stochastic.py  williams_r.py
financelib/trading/bot/bist/: __init__.py  bist_trade_bot_v1.py
financelib/trading/bot/cryptor/: __init__.py  backend.py  cryptor.py  data_fetcher.py  price_predictor.py  sentiment_analyzer.py
src/financelib/: __init__.py  kap.py  news.py  settings.py  stock.py  utils.py
src/financelib/databases/: __init__.py  modals.py  settings.py  sqlite.py
tests/: test_news.py  test_stock.py
