[metadata]
name = financelib
version = 0.1.0
description = Simple finance library for stock market data
long_description = file: README.md
long_description_content_type = text/markdown
author = Yigit GUMUS
author_email = gumusyigit101@gmail.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    yfinance>=0.2.36
    pandas>=1.5.0
    requests>=2.31.0

[options.packages.find]
where = src
